* Fixed a compilation error in RoughMatte OpenCL code (issue #218)
* Fixed a problem with Disney material specular tint
* Fixed a TILEPATH bug causing black renderings
* Fixed BIDIRCPU and LIGHTCPU camera motion blur
* Fixed a bug related to initial camera volume in PATHOCL
* Fixed light tracing camera motion blur and arbitrary clipping plane support
* Fixed a bug in the OpenCL code of the splitfloat3 texture
* Fixed normal mapping
* Fixed a problem when saving ALBEDO AOV
* Fixed RoughGlass event types returned by material evaluation
* Evaluated best radius in PhotonGI, ELVC and DLSC is not affected any more by border rendering
* Fixed a crash when resuming scene rendering without PhotonGI enabled
* Fixed a NaNs problem when using area lights with zero area
* Fixed the export of material emission.directlightsampling.type property

''Beta3 released''

* Solved a self-shadow problem on edges with interpolated normals
* UV scale doesn't affect anymore bump map strength
* Fixed an out of bound memory access in automatic lookup radius code
* Fixed a problem with Disney material, hybrid backward/forward path tracing and low roughness values
* Fixed bump mapping black halo for large scale values

''Beta4 released''

* Fixed the allocation of light tracing sampler shared data in hybrid backward/forward path tracing
* Fixed a problem when using flat instances and OpenCL rendering
* Fixed/Enabled PhotonGI cache on Mix and GlossyCoatting materials when possible
* Fixed a regression in BIDIRCPU causing dark edges on glancing surfaces
* Fixed a crash when PhotonGI caustic cache is enabled but empty (issue #236)

''RC1 released''

* Removed a workaround for Glossy roughness values < sqrt(.0001) for AMD OpenCL driver

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe).