@@ -16,7 +16,7 @@ opencl.gpu.use = 1
 # Use a value of 0 to enable default value
 opencl.gpu.workgroup.size = 64
 screen.refresh.interval = 100
-path.maxdepth = 1
+#path.maxdepth = 1
 path.russianroulette.depth = 5
 path.clamping.variance.maxvalue = 1
 # Film image pipeline plug-ins
