@@ -106,8 +106,11 @@ bool OrthographicCamera::GetSamplePosition(Ray *ray, float *x, float *y) const {
 	ray->UpdateMinMaxWithEpsilon();
 	
 	// Check if we are inside the image plane
-	if ((*x < filmSubRegion[0]) || (*x >= filmSubRegion[1]) ||
-			(*y < filmSubRegion[2]) || (*y >= filmSubRegion[3]))
+	const u_int pixelX = Floor2UInt(*x);
+	const u_int pixelY = Floor2UInt(*y);
+
+	if ((pixelX < filmSubRegion[0]) || (pixelX > filmSubRegion[1]) ||
+			(pixelY < filmSubRegion[2]) || (pixelY > filmSubRegion[3]))
 		return false;
 	else {
 		// World arbitrary clipping plane support
