@@ -149,6 +149,7 @@
 ''RC1 released''
 
 * Removed a workaround for Glossy roughness values < sqrt(.0001) for AMD OpenCL driver
+* Fixed the shift of one pixel on light tracing pass of LIGHTCPU, BIDIRCPU and Hybrid Path (issue #237)
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
